Add RegisterForm & navbar

--- a/Register/index.html
+++ b/Register/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>床位管理系統</title>
+    <title>床位管理系統-登記</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +15,15 @@
     </div>
 </header>
 <main>
+    <nav>
+        <ul>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Home/index.html">首頁</a></li>
+            <li><a href="">儀表板</a></li>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Register/index.html">登記</a></li>
+            <li><a href="">病床</a></li>
+            <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
+        </ul>
+    </nav>
     <form class="out">
         <p>預約住院登記及處理<br>（含單人床登記）</p>
         <div class="in">
@@ -46,7 +55,7 @@
                 <option>急診</option>
             </select>
         </div>
-        <button type="submit" class="btn">預約登記</button>
+        <button type="submit" class="btn" onclick="location.href='//yunqi0102.github.io/Bed_manager/Form/index.html'">預約登記</button>
     </form>
 </main>
 </body>
