--- a/Home/index.html
+++ b/Home/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>床位管理系統</title>
+    <title>床位管理系統-首頁</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
