navbar & instant update 2

--- a/Form/index.html
+++ b/Form/index.html
@@ -5,7 +5,7 @@
     <title>床位管理系統-表單</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="current()">
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
@@ -17,10 +17,14 @@
 <main>
     <nav>
         <ul>
-            <li><a href="https://yunqi0102.github.io/Bed_manager/Home/index.html">首頁</a></li>
-            <li><a href="">儀表板</a></li>
-            <li><a href="https://yunqi0102.github.io/Bed_manager/Register/index.html">登記</a></li>
-            <li><a href="">病床</a></li>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Home/index.html" style="padding-top: 10px;">
+                <img src="..\img\LOGO_home.png" width="33px" class="first_img"><img src="..\img\LOGO_home2.png" width="33px" class="second_img"><br><br>首頁</a></li>
+            <li><a href="">
+                <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Register/index.html">
+                <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
+            <li><a href="">
+                <img src="..\img\LOGO_bed.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_bed2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>病床</a></li>
             <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
         </ul>
     </nav>
@@ -64,8 +68,8 @@
             <td>預約住院天數：
                 <input type="number" class="input" min="1">
             </td>
-            <td>隔離註記：
-                <input type="text" class="remark">
+            <td rowspan="2">隔離註記：
+                <input type="text" class="input remark" style="width: 290px;">
             </td>
         </tr>
         <tr>
@@ -121,7 +125,7 @@
             </td>
         </tr>
     </table>
-    <button type="submit" class="btn">確認</button>
+    <button type="submit" class="btn" onclick="location.href='//yunqi0102.github.io/Bed_manager/Home/index.html'">確認</button>
     </form>
 </main>
 </body>
