--- a/Register/index.html
+++ b/Register/index.html
@@ -32,7 +32,7 @@
         <p>預約住院登記及處理<br>（含單人床登記）</p>
         <div class="in">
             <label for="department">病患科別：</label>
-            <select id="department">
+            <select id="department" class="input">
                 <option>請選擇科別</option>
                 <optgroup label="外科">
                     <option>一般外科</option>
@@ -49,11 +49,11 @@
         </div>
         <div class="in">
             <label for="indexNum">索引號：</label>
-            <input type="number" id="indexNum" min="0" placeholder="請輸入病歷號碼">
+            <input type="number" id="indexNum" class="input" min="0" placeholder="請輸入病歷號碼">
         </div>
         <div class="in">
             <label for="sourse">病患來源：</label>
-            <select id="sourse">
+            <select id="sourse" class="input">
                 <option>請選擇來源</option>
                 <option>門診</option>
                 <option>急診</option>
