--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>床位管理系統-登入</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="current()">
 <header>
     <div>
         <img src="img\FJUHlogo.jpg" alt="a hospital's logo">
