--- a/FloorSelect/index.html
+++ b/FloorSelect/index.html
@@ -5,8 +5,7 @@
     <title>床位狀況查詢-選擇樓層</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
+<body onload="current()">
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
@@ -16,6 +15,19 @@
     </div>
 </header>
 <main>
+    <nav>
+        <ul>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Home/index.html" style="padding-top: 10px;">
+                <img src="..\img\LOGO_home.png" width="33px" class="first_img"><img src="..\img\LOGO_home2.png" width="33px" class="second_img"><br><br>首頁</a></li>
+            <li><a href="">
+                <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
+            <li><a href="https://yunqi0102.github.io/Bed_manager/Register/index.html">
+                <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
+            <li><a href="">
+                <img src="..\img\LOGO_bed.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_bed2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>病床</a></li>
+            <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
+        </ul>
+    </nav>
     <div>
         <button>7A</button>
         <button>8A</button>
