--- a/Form/index.html
+++ b/Form/index.html
@@ -23,7 +23,7 @@
                 <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
             <li><a href="https://yunqi0102.github.io/Bed_manager/Register/index.html">
                 <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
-            <li><a href="//yunqi0102.github.io/Bed_manager/FloorSelect/index.html"">
+            <li><a href="//yunqi0102.github.io/Bed_manager/FloorSelect/index.html">
                 <img src="..\img\LOGO_bed.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_bed2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>病床</a></li>
             <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
         </ul>
