--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="password">密碼：</label>
             <input type="password" id="password" size="12" placeholder="您的身分證字號" autocomplete="current-password">
         </div>
-        <button type="submit" class="btn" onclick="location.href='//yunqi0102.github.io/Bed_manager/Home/index.html'">登入</button>
+        <button type="submit" class="btn" onclick="location.href='https://yunqi0102.000webhostapp.com/Home/'">登入</button>
     </form>
 </main>
 </body>
