--- a/Ward/index.html
+++ b/Ward/index.html
@@ -5,98 +5,61 @@
     <title>病房狀況查詢</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
-    <h1>11B床位動態</h1>
-<div class="bed">
-    <h2 class="male">11B01-1</h2>
-    <h3>張冠廷 <span class="dept">神經外科</span></h3>
-    <p>主治：張志文醫師</p>
-    <p>入院日：2023/04/06</p>
-    <p>出院日：2023/11/06</p>
-</div>
-
-    <div class="bed">
-        <h2 class="male">11B01-2</h2>
-        <h3>王承瀚 <span class="dept">神經外科</span></h3>
-        <p>主治：張志文醫師</p>
-        <p>入院日：2023/07/23</p>
-        <p>出院日：2024/01/16</p>
+<body onload="current()">
+<header>
+    <div>
+        <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
+        <h1>輔大醫院</h1>
+        <h1 class="subtitle">13B01</h1>
+        <div class="current_time"></div>
     </div>
+</header>
+<main>
+    <nav>
+        <ul>
+            <li><a href="https://yunqi0102.000webhostapp.com/Home/" style="padding-top: 10px;">
+                <img src="..\img\LOGO_home.png" width="33px" class="first_img"><img src="..\img\LOGO_home2.png" width="33px" class="second_img"><br><br>首頁</a></li>
+            <li><a href="">
+                <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
+            <li><a href="https://yunqi0102.000webhostapp.com/Register/">
+                <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
+            <li><a href="https://yunqi0102.000webhostapp.com/FloorSelect/">
+                <img src="..\img\LOGO_bed.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_bed2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>病床</a></li>
+            <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
+        </ul>
+    </nav>
+    <div class="list"></div>
+    <div class="status">
+        <div class="bed">
+            <h2 class="male">13B011</h2>
+            <h3>張冠廷 <span class="dept">神經外科</span></h3>
+            <p>主治：張志文醫師</p>
+            <p>入院日：2023/04/06</p>
+            <p>出院日：2023/11/06</p>
+        </div>
 
-    <div class="bed">
-        <h2 class="male">11B01-3</h2>
-        <h3>張志豪 <span class="dept">腎臟內科</span></h3>
-        <p>主治：邱彥豪醫師</p>
-        <p>入院日：2023/02/04</p>
-        <p>出院日：2023/12/06</p>
-    </div>
+        <div class="bed">
+            <h2 class="male">13B012</h2>
+            <h3>王承瀚 <span class="dept">神經外科</span></h3>
+            <p>主治：張志文醫師</p>
+            <p>入院日：2023/07/23</p>
+            <p>出院日：2024/01/16</p>
+        </div>
 
-    <div class="empty_bed">
-        <h2 class="female">11B02-1</h2>
-        <h3>空床</h3>
-    </div>
+        <!-- <div class="bed">
+            <h2 class="male">13B013</h2>
+            <h3>張志豪 <span class="dept">腎臟內科</span></h3>
+            <p>主治：邱彥豪醫師</p>
+            <p>入院日：2023/02/04</p>
+            <p>出院日：2023/12/06</p>
+        </div> -->
 
-    <div class="bed">
-        <h2 class="female">11B02-2</h2>
-        <h3>林思妤 <span class="dept">神經外科</span></h3>
-        <p>主治：張志文醫師</p>
-        <p>入院日：2023/06/28</p>
-        <p>出院日：2023/10/28</p>
+        <div class="empty_bed">
+            <h2 class="female">13B013</h2>
+            <h3>空床</h3>
+        </div>
     </div>
-
-    <div class="bed">
-        <h2 class="female">11B02-3</h2>
-        <h3>林詠晴 <span class="dept">腎臟內科</span></h3>
-        <p>主治：邱彥豪醫師</p>
-        <p>入院日：2023/05/16</p>
-        <p>出院日：2023/11/27</p>
-    </div>
-
-    
-    <div class="bed">
-        <h2 class="female">11B03-1</h2>
-        <h3>楊雅文 <span class="dept">神經外科</span></h3>
-        <p>主治：林鈺祥醫師</p>
-        <p>入院日：2023/08/17</p>
-        <p>出院日：2023/12/06</p>
-    </div>
-
-    <div class="empty_bed">
-        <h2 class="female">11B03-2</h2>
-        <h3>空床</h3>
-    </div>
-
-    <div class="bed">
-        <h2 class="female">11B03-3</h2>
-        <h3>曾亮婕 <span class="dept">腸胃內科</span></h3>
-        <p>主治：曾志明醫師</p>
-        <p>入院日：2023/04/06</p>
-        <p>出院日：2023/11/25</p>
-    </div>
-
-    <div class="bed">
-        <h2 class="male">11B04-1</h2>
-        <h3>楊柏漢 <span class="dept">神經外科</span></h3>
-        <p>主治：林鈺祥醫師</p>
-        <p>入院日：2023/08/21</p>
-        <p>出院日：2023/12/06</p>
-    </div>
-
-    <div class="bed">
-        <h2 class="male">11B04-2</h2>
-        <h3>吳冠宇 <span class="dept">腸胃內科</span></h3>
-        <p>主治：邱彥豪醫師</p>
-        <p>入院日：2023/09/24</p>
-        <p>出院日：2023/12/09</p>
-    </div>
-
-    <div class="bed">
-        <h2 class="male">11B04-3</h2>
-        <h3>林宥廷 <span class="dept">復健科</span></h3>
-        <p>主治：曾志明醫師</p>
-        <p>入院日：2023/08/13</p>
-        <p>出院日：2023/10/31</p>
-    </div>
+</main>
 </body>
+<script src="script.js"></script>
 </html>
