from 000webhost instant_time

--- a/FloorSelect/index.html
+++ b/FloorSelect/index.html
@@ -5,7 +5,7 @@
     <title>床位狀況查詢-選擇樓層</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="current()">
+<body>
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
