--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>床位管理系統-登入</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="current()">
+<body>
 <header>
     <div>
         <img src="img\FJUHlogo.jpg" alt="a hospital's logo">
@@ -27,6 +27,6 @@
         <button type="submit" class="btn" onclick="location.href='https://yunqi0102.000webhostapp.com/Home/'">登入</button>
     </form>
 </main>
-</body>
 <script src="script.js"></script>
+</body>
 </html>
