--- a/Form/index.html
+++ b/Form/index.html
@@ -5,7 +5,7 @@
     <title>床位管理系統-表單</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="current()">
+<body>
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
@@ -128,6 +128,6 @@
     <input type="submit" class="btn" value="確認" onclick="location.href='https://yunqi0102.000webhostapp.com/Home/'">
     </form>
 </main>
-</body>
 <script src="script.js"></script>
+</body>
 </html>
