--- a/Home/index.html
+++ b/Home/index.html
@@ -5,7 +5,7 @@
     <title>床位管理系統-首頁</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="current()">
+<body onload="current_time()">
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
