--- a/Ward/index.html
+++ b/Ward/index.html
@@ -5,7 +5,7 @@
     <title>病房狀況查詢</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="current()">
+<body>
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
