register and form

--- a/Register/index.html
+++ b/Register/index.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
     <div class="out">
-        <form action="insert.php" method="post">
+        <form action="Form.php" method="post">
             <p>預約住院登記及處理<br>（含單人床登記）</p>
             <div class="in">
                 <label for="department">病患科別：</label>
