--- a/Ward/index.html
+++ b/Ward/index.html
@@ -9,7 +9,7 @@
 <header>
     <div>
         <img src="..\img\FJUHlogo.jpg" alt="a hospital's logo">
-        <h1>輔大醫院</h1>
+        <h1>輔大醫院-床位管理系統</h1>
         <h1 class="subtitle">13B01</h1>
         <div class="current_time"></div>
     </div>
@@ -17,9 +17,9 @@
 <main>
     <nav>
         <ul>
-            <li><a href="https://yunqi0102.000webhostapp.com/Home/" style="padding-top: 10px;">
+            <li><a href="https://yunqi0102.000webhostapp.com/Home.php" style="padding-top: 10px;">
                 <img src="..\img\LOGO_home.png" width="33px" class="first_img"><img src="..\img\LOGO_home2.png" width="33px" class="second_img"><br><br>首頁</a></li>
-            <li><a href="">
+            <li><a href="#">
                 <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
             <li><a href="https://yunqi0102.000webhostapp.com/Register/">
                 <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
