add patient list

--- a/Ward/index.html
+++ b/Ward/index.html
@@ -25,25 +25,50 @@
                 <img src="..\img\LOGO_register.png" width="33px" class="first_img"><img src="..\img\LOGO_register2.png" width="33px" class="second_img"><br><br>登記</a></li>
             <li><a href="https://yunqi0102.000webhostapp.com/FloorSelect/">
                 <img src="..\img\LOGO_bed.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_bed2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>病床</a></li>
+            <li><a href="https://yunqi0102.000webhostapp.com/Patient/index.php">
+                <img src="..\img\LOGO_patient.png" width="35px" class="first_img" style="left: 20.5px;"><img src="..\img\LOGO_patient2.png" width="35px" class="second_img" style="left: 20.5px;"><br><br>名單</a></li>
             <p>最後更新<span class="update_date"></span><br><span class="update_time"></span></p>
         </ul>
     </nav>
-    <div class="list"></div>
     <div class="status">
         <div class="bed">
             <h2 class="male">13B011</h2>
             <h3>張冠廷 <span class="dept">神經外科</span></h3>
-            <p>主治：張志文醫師</p>
-            <p>入院日：2023/04/06</p>
-            <p>出院日：2023/11/06</p>
+            <table>
+                <tr>
+                    <td>主治：許亦晴醫師</td>
+                    <td>病歷號：4215412</td>
+                </tr>
+                <tr>
+                    <td>入院日：2023/12/01</td>
+                    <td>身分證：P124720842</td>
+                </tr>
+                <tr>
+                    <td>出院日：2024/01/01</td>
+                    <td>電話：0954154251</td>
+                </tr>
+            </table>
+            <h3 class="note"><span class="surg">手術</span></h3>
         </div>
 
         <div class="bed">
             <h2 class="male">13B012</h2>
             <h3>王承瀚 <span class="dept">神經外科</span></h3>
-            <p>主治：張志文醫師</p>
-            <p>入院日：2023/07/23</p>
-            <p>出院日：2024/01/16</p>
+            <table>
+                <tr>
+                    <td>主治：許亦晴醫師</td>
+                    <td>病歷號：4215412</td>
+                </tr>
+                <tr>
+                    <td>入院日：2023/07/23</td>
+                    <td>身分證：A137331777</td>
+                </tr>
+                <tr>
+                    <td>出院日：2024/01/16</td>
+                    <td>電話：0954154251</td>
+                </tr>
+            </table>
+            <h3 class="note"><span class="chem">化療</span></h3>
         </div>
 
         <!-- <div class="bed">
@@ -60,6 +85,6 @@
         </div>
     </div>
 </main>
-</body>
 <script src="script.js"></script>
+</body>
 </html>
