--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <p>登入系統</p>
         <div class="in">
             <label for="account">帳號：</label>
-            <input type="text" id="account" size="12" placeholder="您的員工編號" autocomplete="current-password">
+            <input type="text" id="account" size="12" placeholder="您的員工編號" autocomplete="off">
         </div>
         <div class="in">
             <label for="password">密碼：</label>
-            <input type="password" id="password" size="12" placeholder="您的身分證字號" autocomplete="current-password">
+            <input type="password" id="password" size="12" placeholder="您的身分證字號" autocomplete="off">
         </div>
         <button type="submit" class="btn">登入</button>
     </form>
