--- a/Ward/index.html
+++ b/Ward/index.html
@@ -32,19 +32,19 @@
     </nav>
     <div class="status">
         <div class="bed">
-            <h2 class="male">13B011</h2>
-            <h3>張冠廷 <span class="dept">神經外科</span></h3>
+            <h2 class="female">13B011</h2>
+            <h3>賴品萱 <span class="dept">神經外科</span></h3>
             <table>
                 <tr>
                     <td>主治：許亦晴醫師</td>
-                    <td>病歷號：4215412</td>
+                    <td>病歷號：421542</td>
                 </tr>
                 <tr>
                     <td>入院日：2023/12/01</td>
                     <td>身分證：P124720842</td>
                 </tr>
                 <tr>
-                    <td>出院日：2024/01/01</td>
+                    <td>出院日：2024/04/23</td>
                     <td>電話：0954154251</td>
                 </tr>
             </table>
@@ -52,15 +52,15 @@
         </div>
 
         <div class="bed">
-            <h2 class="male">13B012</h2>
-            <h3>王承瀚 <span class="dept">神經外科</span></h3>
+            <h2 class="female">13B012</h2>
+            <h3>陳子芸 <span class="dept">神經外科</span></h3>
             <table>
                 <tr>
                     <td>主治：許亦晴醫師</td>
-                    <td>病歷號：4215412</td>
+                    <td>病歷號：125412</td>
                 </tr>
                 <tr>
-                    <td>入院日：2023/07/23</td>
+                    <td>入院日：2024/03/14</td>
                     <td>身分證：A137331777</td>
                 </tr>
                 <tr>
@@ -70,15 +70,6 @@
             </table>
             <h3 class="note"><span class="chem">化療</span></h3>
         </div>
-
-        <!-- <div class="bed">
-            <h2 class="male">13B013</h2>
-            <h3>張志豪 <span class="dept">腎臟內科</span></h3>
-            <p>主治：邱彥豪醫師</p>
-            <p>入院日：2023/02/04</p>
-            <p>出院日：2023/12/06</p>
-        </div> -->
-
         <div class="empty_bed">
             <h2 class="female">13B013</h2>
             <h3>空床</h3>
