--- a/Ward/index.html
+++ b/Ward/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>病房狀況查詢</title>
+    <title>輔大醫院-床位管理系統（床位狀況）</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
