--- a/WardOverview/index.html
+++ b/WardOverview/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>床位狀況查詢-選擇樓層</title>
+    <title>輔大醫院-床位管理系統（病床總覽）</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
