--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </div>
 </header>
 <main>
-    <form class="out" action="Home.php" method="post">
+    <form class="out" action="login.php" method="post">
         <p>登入系統</p>
         <div class="in">
             <label for="account">帳號：</label>
-            <input type="text" id="account" size="12" placeholder="您的員工編號" autocomplete="off">
+            <input type="text" name="account" id="account" size="12" placeholder="請輸入帳號" autocomplete="off">
         </div>
         <div class="in">
             <label for="password">密碼：</label>
-            <input type="password" id="password" size="12" placeholder="您的身分證字號" autocomplete="off">
+            <input type="password" name="password" id="password" size="12" placeholder="" autocomplete="off">
         </div>
         <button type="submit" class="btn">登入</button>
     </form>
