--- a/FloorSelect/index.html
+++ b/FloorSelect/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>輔大醫院-床位管理系統（樓層選擇）</title>
+    <title>床位管理系統-樓層選擇</title>
+    <link rel="icon" href="../img/FJUH_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
