--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>輔大醫院-床位管理系統</title>
+    <title>床位管理系統-首頁</title>
+    <link rel="icon" href="../img/FJUH_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="Hstyle.css">
 </head>
 <body>
