--- a/Register/test.html
+++ b/Register/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>輔大醫院-床位管理系統（住院登記）</title>
+    <link rel="icon" href="../img/FJUH_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="Fstyle.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
 <main>
     <nav>
         <ul>
-            <li><a href="https://yunqi0102.000webhostapp.com/Home.php" style="padding-top: 10px;">
+            <li><a href="https://yunqi0102.000webhostapp.com/Home.html" style="padding-top: 10px;">
                 <img src="..\img\LOGO_home.png" width="33px" class="first_img"><img src="..\img\LOGO_home2.png" width="33px" class="second_img"><br><br>首頁</a></li>
             <li><a href="#">
                 <img src="..\img\LOGO_dashboard.png" width="30px" class="first_img" style="top: 134px; left: 23px;"><img src="..\img\LOGO_dashboard2.png" width="30px" class="second_img" style="top: 134px; left: 23px;"><br><br>儀表板</a></li>
@@ -34,11 +35,11 @@
     <p>基本資料</p>
     <table>
         <tr>
-            <td style="width: 30%;">索引號：
+            <td style="width: 35%;">索引號：
                 <input type="number" name="medical_record_id" class="insert" readonly=true 
                     value="<?php echo "{$medical_record_id}"; ?>">
             </td>
-            <td>病患來源：
+            <td style="width: 35%;">病患來源：
                 <input type="text" name="sourse" class="insert" readonly=true 
                     value="<?php echo "{$sourse}"; ?>">
             </td>
@@ -145,13 +146,11 @@
             </td>
         </tr>
         <tr>
-            <td colspan="3">隔離註記：
-                <input type="text" name="isolation_note" class="input remark" size="109" autocomplete="off">
+            <td>隔離註記：
+                <textarea name="isolation_note" class="input remark_iso" rows="3" autocomplete="off"></textarea>
             </td>
-        </tr>
-        <tr>
-            <td colspan="3">備註：
-                <input type="text" name="note" class="input remark" size="113" autocomplete="off">
+            <td colspan="2">備註：
+                <textarea name="note" class="input remark" rows="3" autocomplete="off"></textarea>
             </td>
         </tr>
     </table>
