--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-Hant-TW">
 <head>
     <meta charset="UTF-8">
-    <title>輔大醫院-床位管理系統（登入）</title>
+    <title>床位管理系統-登入</title>
+    <link rel="icon" href="../img/FJUH_icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,7 +23,7 @@
         </div>
         <div class="in">
             <label for="password">密碼：</label>
-            <input type="password" name="password" id="password" size="12" placeholder="" autocomplete="off">
+            <input type="password" name="password" id="password" size="12" placeholder="請輸入密碼" autocomplete="off">
         </div>
         <button type="submit" class="btn">登入</button>
     </form>
